add save callback

--- a/sim.ipynb
+++ b/sim.ipynb
@@ -1760,6 +1760,167 @@
       "|    n_updates       | 27224     |\n",
       "----------------------------------\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------------------------------\n",
+      "| rollout/           |          |\n",
+      "|    ep_len_mean     | 99       |\n",
+      "|    ep_rew_mean     | -26.3    |\n",
+      "| time/              |          |\n",
+      "|    episodes        | 280      |\n",
+      "|    fps             | 10       |\n",
+      "|    time_elapsed    | 2646     |\n",
+      "|    total_timesteps | 27720    |\n",
+      "| train/             |          |\n",
+      "|    actor_loss      | -1e+03   |\n",
+      "|    critic_loss     | 34.5     |\n",
+      "|    ent_coef        | 1.06     |\n",
+      "|    ent_coef_loss   | -0.0127  |\n",
+      "|    learning_rate   | 0.001    |\n",
+      "|    n_updates       | 27719    |\n",
+      "---------------------------------\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 99        |\n",
+      "|    ep_rew_mean     | -10.1     |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 285       |\n",
+      "|    fps             | 10        |\n",
+      "|    time_elapsed    | 2694      |\n",
+      "|    total_timesteps | 28215     |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | -1.06e+03 |\n",
+      "|    critic_loss     | 35.9      |\n",
+      "|    ent_coef        | 1.1       |\n",
+      "|    ent_coef_loss   | -0.0171   |\n",
+      "|    learning_rate   | 0.001     |\n",
+      "|    n_updates       | 28214     |\n",
+      "----------------------------------\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 99        |\n",
+      "|    ep_rew_mean     | 47.5      |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 290       |\n",
+      "|    fps             | 10        |\n",
+      "|    time_elapsed    | 2741      |\n",
+      "|    total_timesteps | 28710     |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | -1.09e+03 |\n",
+      "|    critic_loss     | 36        |\n",
+      "|    ent_coef        | 1.12      |\n",
+      "|    ent_coef_loss   | 0.00657   |\n",
+      "|    learning_rate   | 0.001     |\n",
+      "|    n_updates       | 28709     |\n",
+      "----------------------------------\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 99        |\n",
+      "|    ep_rew_mean     | 48.5      |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 295       |\n",
+      "|    fps             | 10        |\n",
+      "|    time_elapsed    | 2790      |\n",
+      "|    total_timesteps | 29205     |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | -1.14e+03 |\n",
+      "|    critic_loss     | 35.2      |\n",
+      "|    ent_coef        | 1.2       |\n",
+      "|    ent_coef_loss   | -0.0356   |\n",
+      "|    learning_rate   | 0.001     |\n",
+      "|    n_updates       | 29204     |\n",
+      "----------------------------------\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 99        |\n",
+      "|    ep_rew_mean     | 112       |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 300       |\n",
+      "|    fps             | 10        |\n",
+      "|    time_elapsed    | 2837      |\n",
+      "|    total_timesteps | 29700     |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | -1.29e+03 |\n",
+      "|    critic_loss     | 40.1      |\n",
+      "|    ent_coef        | 1.32      |\n",
+      "|    ent_coef_loss   | -0.0321   |\n",
+      "|    learning_rate   | 0.001     |\n",
+      "|    n_updates       | 29699     |\n",
+      "----------------------------------\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 99        |\n",
+      "|    ep_rew_mean     | 112       |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 305       |\n",
+      "|    fps             | 10        |\n",
+      "|    time_elapsed    | 2884      |\n",
+      "|    total_timesteps | 30195     |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | -1.51e+03 |\n",
+      "|    critic_loss     | 42.2      |\n",
+      "|    ent_coef        | 1.46      |\n",
+      "|    ent_coef_loss   | 0.0208    |\n",
+      "|    learning_rate   | 0.001     |\n",
+      "|    n_updates       | 30194     |\n",
+      "----------------------------------\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 99        |\n",
+      "|    ep_rew_mean     | 215       |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 310       |\n",
+      "|    fps             | 10        |\n",
+      "|    time_elapsed    | 2932      |\n",
+      "|    total_timesteps | 30690     |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | -1.55e+03 |\n",
+      "|    critic_loss     | 39.4      |\n",
+      "|    ent_coef        | 1.45      |\n",
+      "|    ent_coef_loss   | 0.0997    |\n",
+      "|    learning_rate   | 0.001     |\n",
+      "|    n_updates       | 30689     |\n",
+      "----------------------------------\n"
+     ]
     }
    ],
    "source": [
@@ -1775,6 +1936,7 @@
     "from stable_baselines3.common.vec_env import VecNormalize\n",
     "from stable_baselines3.common.vec_env import DummyVecEnv, SubprocVecEnv\n",
     "from stable_baselines3.common.env_util import make_vec_env\n",
+    "from stable_baselines.common.callbacks import EvalCallback\n",
     "\n",
     "\n",
     "env = roboverse.make(\"Widow250PickPlace-v1\",\n",
@@ -1784,6 +1946,16 @@
     "#env = TimeFeatureWrapper(env)\n",
     "#env = make_vec_env(env_id, n_envs=4, seed=0, vec_env_cls=SubprocVecEnv)\n",
     "obs = env.reset()\n",
+    "\n",
+    "# Separate evaluation env\n",
+    "eval_env = roboverse.make(\"Widow250PickPlace-v1\",\n",
+    "                         gui=False,\n",
+    "                         observation_mode=\"pixels\",\n",
+    "                         transpose_image=False)\n",
+    "# Use deterministic actions for evaluation\n",
+    "eval_callback = EvalCallback(eval_env, best_model_save_path='./data/tqc/',\n",
+    "                             log_path='./data/tqc/', eval_freq=1000,\n",
+    "                             deterministic=True, render=False)\n",
     "\n",
     "# optimize_memory_usage=True,\n",
     "# model = TD3(\"MultiInputPolicy\", env, buffer_size=200000, learning_rate=0.01, \\\n",
@@ -1807,7 +1979,7 @@
     "# model.train(gradient_steps=10000)\n",
     "\n",
     "print(\"start learning\")\n",
-    "model.learn(total_timesteps=200000, log_interval=5, tb_log_name=\"exp\", reset_num_timesteps = False, progress_bar=True)\n",
+    "model.learn(total_timesteps=200000, callback=eval_callback, log_interval=5, tb_log_name=\"exp\", reset_num_timesteps = False, progress_bar=True)\n",
     "model.save(\"data/tqc\")\n",
     "model.save_replay_buffer(f\"data/tqc_expert_grasp{i+1}\")\n",
     "\n",
