--- a/sim.ipynb
+++ b/sim.ipynb
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,9 +397,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "pybullet build time: May 20 2022 19:44:17\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "import numpy as np\n",
@@ -484,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -492,102 +500,23 @@
      "output_type": "stream",
      "text": [
       "/raid/notebook/enhupgu/cog/cogv/lib/python3.8/site-packages/gym/spaces/box.py:127: UserWarning: \u001b[33mWARN: Box bound precision lowered by casting to float32\u001b[0m\n",
-      "  logger.warn(f\"Box bound precision lowered by casting to {self.dtype}\")\n",
-      "/raid/notebook/enhupgu/cog/cogv/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:174: UserWarning: \u001b[33mWARN: Future gym versions will require that `Env.reset` can be passed a `seed` instead of using `Env.seed` for resetting the environment random number generator.\u001b[0m\n",
-      "  logger.warn(\n",
-      "/raid/notebook/enhupgu/cog/cogv/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:187: UserWarning: \u001b[33mWARN: Future gym versions will require that `Env.reset` can be passed `options` to allow the environment initialisation to be passed additional information.\u001b[0m\n",
-      "  logger.warn(\n",
-      "/raid/notebook/enhupgu/cog/cogv/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:195: UserWarning: \u001b[33mWARN: The result returned by `env.reset()` was not a tuple of the form `(obs, info)`, where `obs` is a observation and `info` is a dictionary containing additional information. Actual type: `<class 'dict'>`\u001b[0m\n",
-      "  logger.warn(\n",
-      "/raid/notebook/enhupgu/cog/cogv/lib/python3.8/site-packages/stable_baselines3/common/vec_env/patch_gym.py:49: UserWarning: You provided an OpenAI Gym environment. We strongly recommend transitioning to Gymnasium environments. Stable-Baselines3 is automatically wrapping your environments in a compatibility layer, which could potentially cause issues.\n",
-      "  warnings.warn(\n"
+      "  logger.warn(f\"Box bound precision lowered by casting to {self.dtype}\")\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using cuda device\n",
-      "Wrapping the env with a `Monitor` wrapper\n",
-      "Wrapping the env in a DummyVecEnv.\n",
-      "Wrapping the env in a VecTransposeImage.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/raid/notebook/enhupgu/cog/cogv/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:219: DeprecationWarning: \u001b[33mWARN: Core environment is written in old step API which returns one bool instead of two. It is recommended to rewrite the environment with new step API. \u001b[0m\n",
-      "  logger.deprecation(\n",
-      "/raid/notebook/enhupgu/cog/cogv/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:225: DeprecationWarning: `np.bool8` is a deprecated alias for `np.bool_`.  (Deprecated NumPy 1.24)\n",
-      "  if not isinstance(done, (bool, np.bool8)):\n",
-      "/raid/notebook/enhupgu/cog/cogv/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:141: UserWarning: \u001b[33mWARN: The obs returned by the `step()` method was expecting numpy array dtype to be float32, actual type: float64\u001b[0m\n",
-      "  logger.warn(\n",
-      "/raid/notebook/enhupgu/cog/cogv/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:165: UserWarning: \u001b[33mWARN: The obs returned by the `step()` method is not within the observation space.\u001b[0m\n",
-      "  logger.warn(f\"{pre} is not within the observation space.\")\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "num_trajectories: 100 success rate: 0.84 Reward: 86.0\n",
-      "num_trajectories: 200 success rate: 0.87 Reward: 82.0\n",
-      "num_trajectories: 300 success rate: 0.8666666666666667 Reward: 78.0\n",
-      "num_trajectories: 400 success rate: 0.885 Reward: 135.0\n",
-      "num_trajectories: 500 success rate: 0.892 Reward: 73.0\n",
-      "num_trajectories: 600 success rate: 0.89 Reward: 82.0\n",
-      "num_trajectories: 700 success rate: 0.88 Reward: 135.0\n",
-      "num_trajectories: 800 success rate: 0.8825 Reward: 80.0\n",
-      "num_trajectories: 900 success rate: 0.8744444444444445 Reward: 88.0\n",
-      "num_trajectories: 1000 success rate: 0.878 Reward: 141.0\n",
-      "num_trajectories: 1100 success rate: 0.8736363636363637 Reward: 80.0\n",
-      "num_trajectories: 1200 success rate: 0.8741666666666666 Reward: 76.0\n",
-      "num_trajectories: 1300 success rate: 0.8746153846153846 Reward: 82.0\n",
-      "num_trajectories: 1400 success rate: 0.8757142857142857 Reward: 76.0\n",
-      "num_trajectories: 1500 success rate: 0.8746666666666667 Reward: 84.0\n",
-      "num_trajectories: 1600 success rate: 0.875 Reward: 80.0\n",
-      "num_trajectories: 1700 success rate: 0.8788235294117647 Reward: 80.0\n",
-      "num_trajectories: 1800 success rate: 0.8788888888888889 Reward: 78.0\n",
-      "num_trajectories: 1900 success rate: 0.878421052631579 Reward: -35.0\n",
-      "num_trajectories: 2000 success rate: 0.8795 Reward: 88.0\n",
-      "num_trajectories: 2100 success rate: 0.8795238095238095 Reward: 74.0\n",
-      "num_trajectories: 2200 success rate: 0.8786363636363637 Reward: 82.0\n",
-      "num_trajectories: 2300 success rate: 0.8795652173913043 Reward: 75.0\n",
-      "num_trajectories: 2400 success rate: 0.8783333333333333 Reward: 75.0\n",
-      "num_trajectories: 2500 success rate: 0.8776 Reward: 82.0\n",
-      "num_trajectories: 2600 success rate: 0.8788461538461538 Reward: 76.0\n",
-      "num_trajectories: 2700 success rate: 0.8770370370370371 Reward: -35.0\n",
-      "num_trajectories: 2800 success rate: 0.8760714285714286 Reward: 84.0\n",
-      "num_trajectories: 2900 success rate: 0.8737931034482759 Reward: 78.0\n",
-      "num_trajectories: 3000 success rate: 0.875 Reward: 82.0\n",
-      "num_trajectories: 3100 success rate: 0.8722580645161291 Reward: 86.0\n",
-      "num_trajectories: 3200 success rate: 0.8725 Reward: 76.0\n",
-      "num_trajectories: 3300 success rate: 0.8721212121212121 Reward: 80.0\n",
-      "num_trajectories: 3400 success rate: 0.8732352941176471 Reward: 78.0\n",
-      "num_trajectories: 3500 success rate: 0.8745714285714286 Reward: 127.0\n",
-      "num_trajectories: 3600 success rate: 0.8733333333333333 Reward: -35.0\n",
-      "num_trajectories: 3700 success rate: 0.8724324324324324 Reward: 84.0\n",
-      "num_trajectories: 3800 success rate: 0.8718421052631579 Reward: 82.0\n",
-      "num_trajectories: 3900 success rate: 0.8715384615384615 Reward: 133.0\n",
-      "num_trajectories: 4000 success rate: 0.87025 Reward: 137.0\n",
-      "num_trajectories: 4100 success rate: 0.8714634146341463 Reward: 82.0\n",
-      "num_trajectories: 4200 success rate: 0.8714285714285714 Reward: 80.0\n",
-      "num_trajectories: 4300 success rate: 0.8725581395348837 Reward: 129.0\n",
-      "num_trajectories: 4400 success rate: 0.8727272727272727 Reward: 80.0\n",
-      "num_trajectories: 4500 success rate: 0.8722222222222222 Reward: 82.0\n",
-      "num_trajectories: 4600 success rate: 0.8721739130434782 Reward: 82.0\n",
-      "num_trajectories: 4700 success rate: 0.8721276595744681 Reward: 137.0\n",
-      "num_trajectories: 4800 success rate: 0.8722916666666667 Reward: 16.0\n",
-      "num_trajectories: 4900 success rate: 0.873265306122449 Reward: 16.0\n",
-      "num_trajectories: 5000 success rate: 0.8734 Reward: 90.0\n",
-      "num_trajectories: 5100 success rate: 0.8733333333333333 Reward: 82.0\n",
-      "num_trajectories: 5200 success rate: 0.8723076923076923 Reward: 84.0\n",
-      "num_trajectories: 5300 success rate: 0.8722641509433963 Reward: 84.0\n",
-      "num_trajectories: 5400 success rate: 0.8731481481481481 Reward: 137.0\n",
-      "num_trajectories: 5500 success rate: 0.8730909090909091 Reward: 86.0\n",
-      "num_trajectories: 5600 success rate: 0.87375 Reward: 82.0\n",
-      "num_trajectories: 5700 success rate: 0.8743859649122807 Reward: 82.0\n"
+     "ename": "AttributeError",
+     "evalue": "'Widow250PickPlaceEnv' object has no attribute 'env'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 15\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mstable_baselines3\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcommon\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mvec_env\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m DummyVecEnv, SubprocVecEnv\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mstable_baselines3\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcommon\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcallbacks\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m EvalCallback, CheckpointCallback\n\u001b[0;32m---> 15\u001b[0m env \u001b[38;5;241m=\u001b[39m \u001b[43mroboverse\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmake\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mWidow250PickPlace-v2\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     16\u001b[0m \u001b[43m                         \u001b[49m\u001b[43mgui\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m     17\u001b[0m \u001b[43m                         \u001b[49m\u001b[43mobservation_mode\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mpixels\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     18\u001b[0m \u001b[43m                         \u001b[49m\u001b[43mtranspose_image\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;66;03m#env = TimeFeatureWrapper(env)\u001b[39;00m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;66;03m#env = DummyVecEnv([make_env(\"Widow250PickPlace-v1\", i) for i in range(4)])\u001b[39;00m\n\u001b[1;32m     21\u001b[0m obs \u001b[38;5;241m=\u001b[39m env\u001b[38;5;241m.\u001b[39mreset()\n",
+      "File \u001b[0;32m~/Sim2Real/roboverse/envs/registration.py:1083\u001b[0m, in \u001b[0;36mmake\u001b[0;34m(env_name, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1082\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmake\u001b[39m(env_name, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[0;32m-> 1083\u001b[0m     env \u001b[38;5;241m=\u001b[39m \u001b[43mgym\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmake\u001b[49m\u001b[43m(\u001b[49m\u001b[43menv_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1084\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m env\n",
+      "File \u001b[0;32m~/cog/cogv/lib/python3.8/site-packages/gym/envs/registration.py:640\u001b[0m, in \u001b[0;36mmake\u001b[0;34m(id, max_episode_steps, autoreset, apply_api_compatibility, disable_env_checker, **kwargs)\u001b[0m\n\u001b[1;32m    637\u001b[0m     render_mode \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    639\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 640\u001b[0m     env \u001b[38;5;241m=\u001b[39m \u001b[43menv_creator\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m_kwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    641\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m    642\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m (\n\u001b[1;32m    643\u001b[0m         \u001b[38;5;28mstr\u001b[39m(e)\u001b[38;5;241m.\u001b[39mfind(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgot an unexpected keyword argument \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrender_mode\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m    644\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m apply_human_rendering\n\u001b[1;32m    645\u001b[0m     ):\n",
+      "File \u001b[0;32m~/Sim2Real/roboverse/envs/widow250_pickplace.py:40\u001b[0m, in \u001b[0;36mWidow250PickPlaceEnv.__init__\u001b[0;34m(self, container_name, fixed_container_position, start_object_in_gripper, **kwargs)\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mplace_success_radius_threshold \u001b[38;5;241m=\u001b[39m container_config[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mplace_success_radius_threshold\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m     39\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstart_object_in_gripper \u001b[38;5;241m=\u001b[39m start_object_in_gripper\n\u001b[0;32m---> 40\u001b[0m \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mWidow250PickPlaceEnv\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Sim2Real/roboverse/envs/widow250.py:127\u001b[0m, in \u001b[0;36mWidow250Env.__init__\u001b[0;34m(self, control_mode, observation_mode, observation_img_dim, transpose_image, object_names, object_scales, object_orientations, object_position_high, object_position_low, target_object, load_tray, num_sim_steps, num_sim_steps_reset, num_sim_steps_discrete_action, reward_type, grasp_success_height_threshold, grasp_success_object_gripper_threshold, use_neutral_action, neutral_gripper_open, xyz_action_scale, abc_action_scale, gripper_action_scale, ee_pos_high, ee_pos_low, camera_target_pos, camera_distance, camera_roll, camera_pitch, camera_yaw, gui, in_vr_replay)\u001b[0m\n\u001b[1;32m    123\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_set_observation_space()\n\u001b[1;32m    125\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mis_gripper_open \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m  \u001b[38;5;66;03m# TODO(avi): Clean this up\u001b[39;00m\n\u001b[0;32m--> 127\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreset\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    128\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mee_pos_init, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mee_quat_init \u001b[38;5;241m=\u001b[39m bullet\u001b[38;5;241m.\u001b[39mget_link_state(\n\u001b[1;32m    129\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrobot_id, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mend_effector_index)\n",
+      "File \u001b[0;32m~/Sim2Real/roboverse/envs/widow250_pickplace.py:93\u001b[0m, in \u001b[0;36mWidow250PickPlaceEnv.reset\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     89\u001b[0m ee_pos_init, ee_quat_init \u001b[38;5;241m=\u001b[39m bullet\u001b[38;5;241m.\u001b[39mget_link_state(\n\u001b[1;32m     90\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrobot_id, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mend_effector_index)\n\u001b[1;32m     91\u001b[0m ee_pos_init[\u001b[38;5;241m2\u001b[39m] \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.05\u001b[39m\n\u001b[1;32m     92\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpick_point \u001b[38;5;241m=\u001b[39m bullet\u001b[38;5;241m.\u001b[39mget_object_position(\n\u001b[0;32m---> 93\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43menv\u001b[49m\u001b[38;5;241m.\u001b[39mobjects[\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mobject_to_target])[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m     95\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstart_object_in_gripper:\n\u001b[1;32m     96\u001b[0m     bullet\u001b[38;5;241m.\u001b[39mload_state(osp\u001b[38;5;241m.\u001b[39mjoin(OBJECT_IN_GRIPPER_PATH,\n\u001b[1;32m     97\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mobject_in_gripper_reset.bullet\u001b[39m\u001b[38;5;124m'\u001b[39m))\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Widow250PickPlaceEnv' object has no attribute 'env'"
      ]
     }
    ],
