--- a/test.ipynb
+++ b/test.ipynb
@@ -20,7 +20,7 @@
     "from stable_baselines3.common.callbacks import EvalCallback\n",
     "\n",
     "\n",
-    "model = TQC.load(\"data/tqc2/tqc_model_135000_steps\")\n",
+    "model = TQC.load(\"data/tqc1/tqc_model_873000_steps\")\n",
     "env = roboverse.make(\"Widow250PickPlace-v2\",\n",
     "                         gui=True,\n",
     "                         observation_mode=\"pixels\",\n",
@@ -33,6 +33,7 @@
     "for i in range(int(1e4)):\n",
     "    action, _states = model.predict(obs)\n",
     "    obs, rewards, dones, info = env.step(action)\n",
+    "    print(rewards)\n",
     "    env.render(\"human\")\n",
     "env.close()"
    ]
