--- a/sim.ipynb
+++ b/sim.ipynb
@@ -488,6 +488,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/gym/envs/registration.py:555: UserWarning: \u001b[33mWARN: The environment Widow250PickPlace-v2 is out of date. You should consider upgrading to version `v3`.\u001b[0m\n",
+      "  logger.warn(\n",
       "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/gym/spaces/box.py:127: UserWarning: \u001b[33mWARN: Box bound precision lowered by casting to float32\u001b[0m\n",
       "  logger.warn(f\"Box bound precision lowered by casting to {self.dtype}\")\n",
       "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:174: UserWarning: \u001b[33mWARN: Future gym versions will require that `Env.reset` can be passed a `seed` instead of using `Env.seed` for resetting the environment random number generator.\u001b[0m\n",
@@ -495,9 +497,7 @@
       "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:187: UserWarning: \u001b[33mWARN: Future gym versions will require that `Env.reset` can be passed `options` to allow the environment initialisation to be passed additional information.\u001b[0m\n",
       "  logger.warn(\n",
       "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:195: UserWarning: \u001b[33mWARN: The result returned by `env.reset()` was not a tuple of the form `(obs, info)`, where `obs` is a observation and `info` is a dictionary containing additional information. Actual type: `<class 'dict'>`\u001b[0m\n",
-      "  logger.warn(\n",
-      "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/stable_baselines3/common/vec_env/patch_gym.py:49: UserWarning: You provided an OpenAI Gym environment. We strongly recommend transitioning to Gymnasium environments. Stable-Baselines3 is automatically wrapping your environments in a compatibility layer, which could potentially cause issues.\n",
-      "  warnings.warn(\n"
+      "  logger.warn(\n"
      ]
     },
     {
@@ -514,17 +514,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/stable_baselines3/common/vec_env/patch_gym.py:49: UserWarning: You provided an OpenAI Gym environment. We strongly recommend transitioning to Gymnasium environments. Stable-Baselines3 is automatically wrapping your environments in a compatibility layer, which could potentially cause issues.\n",
+      "  warnings.warn(\n",
       "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:219: DeprecationWarning: \u001b[33mWARN: Core environment is written in old step API which returns one bool instead of two. It is recommended to rewrite the environment with new step API. \u001b[0m\n",
       "  logger.deprecation(\n",
       "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:225: DeprecationWarning: `np.bool8` is a deprecated alias for `np.bool_`.  (Deprecated NumPy 1.24)\n",
       "  if not isinstance(done, (bool, np.bool8)):\n",
-      "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:137: UserWarning: \u001b[33mWARN: The obs returned by the `step()` method was expecting a numpy array, actual type: <class 'float'>\u001b[0m\n",
+      "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:141: UserWarning: \u001b[33mWARN: The obs returned by the `step()` method was expecting numpy array dtype to be float32, actual type: float64\u001b[0m\n",
       "  logger.warn(\n",
-      "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/gym/spaces/box.py:227: UserWarning: \u001b[33mWARN: Casting input x to numpy array.\u001b[0m\n",
-      "  logger.warn(\"Casting input x to numpy array.\")\n",
       "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:165: UserWarning: \u001b[33mWARN: The obs returned by the `step()` method is not within the observation space.\u001b[0m\n",
       "  logger.warn(f\"{pre} is not within the observation space.\")\n",
-      "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:141: UserWarning: \u001b[33mWARN: The obs returned by the `step()` method was expecting numpy array dtype to be float32, actual type: float64\u001b[0m\n",
+      "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:141: UserWarning: \u001b[33mWARN: The obs returned by the `step()` method was expecting numpy array dtype to be float32, actual type: int64\u001b[0m\n",
       "  logger.warn(\n"
      ]
     },
@@ -532,14 +532,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "num_trajectories: 100 success rate: 0.88 Reward: 126.0\n",
-      "success rate: 0.88\n"
+      "num_trajectories: 100 success rate: 0.87 Reward: 79.0\n",
+      "success rate: 0.87\n",
+      "start learning\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6b06861e3fd24bd98e73ae7bbc900954",
+       "model_id": "06e670b9bf964e45b0ec7c77fd495fa4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -549,13 +550,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "start learning\n"
-     ]
     },
     {
      "data": {
@@ -588,12 +582,12 @@
       "|    ep_rew_mean     | -99      |\n",
       "| time/              |          |\n",
       "|    episodes        | 5        |\n",
-      "|    fps             | 8        |\n",
-      "|    time_elapsed    | 61       |\n",
+      "|    fps             | 11       |\n",
+      "|    time_elapsed    | 44       |\n",
       "|    total_timesteps | 495      |\n",
       "| train/             |          |\n",
-      "|    actor_loss      | -42.3    |\n",
-      "|    critic_loss     | 0.786    |\n",
+      "|    actor_loss      | -39.1    |\n",
+      "|    critic_loss     | 0.865    |\n",
       "|    ent_coef        | 0.746    |\n",
       "|    ent_coef_loss   | -3.92    |\n",
       "|    learning_rate   | 0.001    |\n",
@@ -637,7 +631,7 @@
     "model = TQC(env=env, batch_size=2048, buffer_size=20000, gamma=0.95, learning_rate=0.001, policy='MultiInputPolicy',\n",
     "             policy_kwargs=dict(net_arch=[512, 512, 512], n_critics=2),\n",
     "             replay_buffer_class=HerReplayBuffer,\n",
-    "             replay_buffer_kwargs=dict(goal_selection_strategy='future', n_sampled_goal=4),\n",
+    "             replay_buffer_kwargs=dict(goal_selection_strategy='future', n_sampled_goal=4,), #max_episode_length=200,online_sampling=True,\n",
     "             tau=0.05, learning_starts=200, verbose=1)\n",
     "\n",
     "COLLECT=True\n",
