--- a/sim.ipynb
+++ b/sim.ipynb
@@ -483,7 +483,309 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/gym/envs/registration.py:555: UserWarning: \u001b[33mWARN: The environment Widow250PickPlace-v2 is out of date. You should consider upgrading to version `v3`.\u001b[0m\n",
+      "  logger.warn(\n",
+      "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/gym/spaces/box.py:127: UserWarning: \u001b[33mWARN: Box bound precision lowered by casting to float32\u001b[0m\n",
+      "  logger.warn(f\"Box bound precision lowered by casting to {self.dtype}\")\n",
+      "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:174: UserWarning: \u001b[33mWARN: Future gym versions will require that `Env.reset` can be passed a `seed` instead of using `Env.seed` for resetting the environment random number generator.\u001b[0m\n",
+      "  logger.warn(\n",
+      "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:187: UserWarning: \u001b[33mWARN: Future gym versions will require that `Env.reset` can be passed `options` to allow the environment initialisation to be passed additional information.\u001b[0m\n",
+      "  logger.warn(\n",
+      "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:195: UserWarning: \u001b[33mWARN: The result returned by `env.reset()` was not a tuple of the form `(obs, info)`, where `obs` is a observation and `info` is a dictionary containing additional information. Actual type: `<class 'dict'>`\u001b[0m\n",
+      "  logger.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using cuda device\n",
+      "Wrapping the env with a `Monitor` wrapper\n",
+      "Wrapping the env in a DummyVecEnv.\n",
+      "Wrapping the env in a VecTransposeImage.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/stable_baselines3/common/vec_env/patch_gym.py:49: UserWarning: You provided an OpenAI Gym environment. We strongly recommend transitioning to Gymnasium environments. Stable-Baselines3 is automatically wrapping your environments in a compatibility layer, which could potentially cause issues.\n",
+      "  warnings.warn(\n",
+      "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:219: DeprecationWarning: \u001b[33mWARN: Core environment is written in old step API which returns one bool instead of two. It is recommended to rewrite the environment with new step API. \u001b[0m\n",
+      "  logger.deprecation(\n",
+      "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:225: DeprecationWarning: `np.bool8` is a deprecated alias for `np.bool_`.  (Deprecated NumPy 1.24)\n",
+      "  if not isinstance(done, (bool, np.bool8)):\n",
+      "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:141: UserWarning: \u001b[33mWARN: The obs returned by the `step()` method was expecting numpy array dtype to be float32, actual type: float64\u001b[0m\n",
+      "  logger.warn(\n",
+      "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:165: UserWarning: \u001b[33mWARN: The obs returned by the `step()` method is not within the observation space.\u001b[0m\n",
+      "  logger.warn(f\"{pre} is not within the observation space.\")\n",
+      "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:141: UserWarning: \u001b[33mWARN: The obs returned by the `step()` method was expecting numpy array dtype to be float32, actual type: int64\u001b[0m\n",
+      "  logger.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num_trajectories: 100 success rate: 0.9 Reward: 127.0\n",
+      "success rate: 0.9\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3cc93e82e1f74ec4be1c004ab01605fe",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start learning\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/gymnasium/core.py:311: UserWarning: <span style=\"color: #808000; text-decoration-color: #808000\">WARN: </span>\n",
+       "<span style=\"color: #808000; text-decoration-color: #808000\">env.compute_reward to get variables from other wrappers is deprecated and will be removed in v1.0, to get this </span>\n",
+       "<span style=\"color: #808000; text-decoration-color: #808000\">variable you can do `env.unwrapped.compute_reward` for environment variables or </span>\n",
+       "<span style=\"color: #808000; text-decoration-color: #808000\">`env.get_wrapper_attr('compute_reward')` that will search the reminding wrappers.</span>\n",
+       "  logger.warn(\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/gymnasium/core.py:311: UserWarning: \u001b[33mWARN: \u001b[0m\n",
+       "\u001b[33menv.compute_reward to get variables from other wrappers is deprecated and will be removed in v1.0, to get this \u001b[0m\n",
+       "\u001b[33mvariable you can do `env.unwrapped.compute_reward` for environment variables or \u001b[0m\n",
+       "\u001b[33m`env.get_wrapper_attr('compute_reward')` that will search the reminding wrappers.\u001b[0m\n",
+       "  logger.warn(\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------------------------------\n",
+      "| rollout/           |          |\n",
+      "|    ep_len_mean     | 99       |\n",
+      "|    ep_rew_mean     | -99      |\n",
+      "| time/              |          |\n",
+      "|    episodes        | 5        |\n",
+      "|    fps             | 11       |\n",
+      "|    time_elapsed    | 41       |\n",
+      "|    total_timesteps | 495      |\n",
+      "| train/             |          |\n",
+      "|    actor_loss      | -48.8    |\n",
+      "|    critic_loss     | 1.09     |\n",
+      "|    ent_coef        | 0.747    |\n",
+      "|    ent_coef_loss   | -3.82    |\n",
+      "|    learning_rate   | 0.001    |\n",
+      "|    n_updates       | 294      |\n",
+      "---------------------------------\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------------------------------\n",
+      "| rollout/           |          |\n",
+      "|    ep_len_mean     | 99       |\n",
+      "|    ep_rew_mean     | -99      |\n",
+      "| time/              |          |\n",
+      "|    episodes        | 10       |\n",
+      "|    fps             | 9        |\n",
+      "|    time_elapsed    | 100      |\n",
+      "|    total_timesteps | 990      |\n",
+      "| train/             |          |\n",
+      "|    actor_loss      | -151     |\n",
+      "|    critic_loss     | 5.94     |\n",
+      "|    ent_coef        | 0.493    |\n",
+      "|    ent_coef_loss   | -3.89    |\n",
+      "|    learning_rate   | 0.001    |\n",
+      "|    n_updates       | 789      |\n",
+      "---------------------------------\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------------------------------\n",
+      "| rollout/           |          |\n",
+      "|    ep_len_mean     | 99       |\n",
+      "|    ep_rew_mean     | -99      |\n",
+      "| time/              |          |\n",
+      "|    episodes        | 15       |\n",
+      "|    fps             | 9        |\n",
+      "|    time_elapsed    | 159      |\n",
+      "|    total_timesteps | 1485     |\n",
+      "| train/             |          |\n",
+      "|    actor_loss      | -339     |\n",
+      "|    critic_loss     | 18.1     |\n",
+      "|    ent_coef        | 0.415    |\n",
+      "|    ent_coef_loss   | -2.5     |\n",
+      "|    learning_rate   | 0.001    |\n",
+      "|    n_updates       | 1284     |\n",
+      "---------------------------------\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------------------------------\n",
+      "| rollout/           |          |\n",
+      "|    ep_len_mean     | 99       |\n",
+      "|    ep_rew_mean     | -99      |\n",
+      "| time/              |          |\n",
+      "|    episodes        | 20       |\n",
+      "|    fps             | 8        |\n",
+      "|    time_elapsed    | 220      |\n",
+      "|    total_timesteps | 1980     |\n",
+      "| train/             |          |\n",
+      "|    actor_loss      | -285     |\n",
+      "|    critic_loss     | 9.53     |\n",
+      "|    ent_coef        | 0.323    |\n",
+      "|    ent_coef_loss   | -5.12    |\n",
+      "|    learning_rate   | 0.001    |\n",
+      "|    n_updates       | 1779     |\n",
+      "---------------------------------\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------------------------------\n",
+      "| rollout/           |          |\n",
+      "|    ep_len_mean     | 99       |\n",
+      "|    ep_rew_mean     | -99      |\n",
+      "| time/              |          |\n",
+      "|    episodes        | 25       |\n",
+      "|    fps             | 8        |\n",
+      "|    time_elapsed    | 281      |\n",
+      "|    total_timesteps | 2475     |\n",
+      "| train/             |          |\n",
+      "|    actor_loss      | -425     |\n",
+      "|    critic_loss     | 15       |\n",
+      "|    ent_coef        | 0.263    |\n",
+      "|    ent_coef_loss   | -2.49    |\n",
+      "|    learning_rate   | 0.001    |\n",
+      "|    n_updates       | 2274     |\n",
+      "---------------------------------\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------------------------------\n",
+      "| rollout/           |          |\n",
+      "|    ep_len_mean     | 99       |\n",
+      "|    ep_rew_mean     | -99      |\n",
+      "| time/              |          |\n",
+      "|    episodes        | 30       |\n",
+      "|    fps             | 8        |\n",
+      "|    time_elapsed    | 344      |\n",
+      "|    total_timesteps | 2970     |\n",
+      "| train/             |          |\n",
+      "|    actor_loss      | -568     |\n",
+      "|    critic_loss     | 21.2     |\n",
+      "|    ent_coef        | 0.201    |\n",
+      "|    ent_coef_loss   | -1.83    |\n",
+      "|    learning_rate   | 0.001    |\n",
+      "|    n_updates       | 2769     |\n",
+      "---------------------------------\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 99        |\n",
+      "|    ep_rew_mean     | -99       |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 35        |\n",
+      "|    fps             | 8         |\n",
+      "|    time_elapsed    | 406       |\n",
+      "|    total_timesteps | 3465      |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | -3.28e+03 |\n",
+      "|    critic_loss     | 171       |\n",
+      "|    ent_coef        | 0.23      |\n",
+      "|    ent_coef_loss   | 5.99      |\n",
+      "|    learning_rate   | 0.001     |\n",
+      "|    n_updates       | 3264      |\n",
+      "----------------------------------\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------------------------------\n",
+      "| rollout/           |          |\n",
+      "|    ep_len_mean     | 99       |\n",
+      "|    ep_rew_mean     | -99      |\n",
+      "| time/              |          |\n",
+      "|    episodes        | 40       |\n",
+      "|    fps             | 8        |\n",
+      "|    time_elapsed    | 469      |\n",
+      "|    total_timesteps | 3960     |\n",
+      "| train/             |          |\n",
+      "|    actor_loss      | -3.3e+04 |\n",
+      "|    critic_loss     | 1.58e+03 |\n",
+      "|    ent_coef        | 0.496    |\n",
+      "|    ent_coef_loss   | 4.81     |\n",
+      "|    learning_rate   | 0.001    |\n",
+      "|    n_updates       | 3759     |\n",
+      "---------------------------------\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------\n",
+      "| rollout/           |           |\n",
+      "|    ep_len_mean     | 99        |\n",
+      "|    ep_rew_mean     | -99       |\n",
+      "| time/              |           |\n",
+      "|    episodes        | 45        |\n",
+      "|    fps             | 8         |\n",
+      "|    time_elapsed    | 532       |\n",
+      "|    total_timesteps | 4455      |\n",
+      "| train/             |           |\n",
+      "|    actor_loss      | -1.94e+05 |\n",
+      "|    critic_loss     | 7.95e+03  |\n",
+      "|    ent_coef        | 1.02      |\n",
+      "|    ent_coef_loss   | -0.229    |\n",
+      "|    learning_rate   | 0.001     |\n",
+      "|    n_updates       | 4254      |\n",
+      "----------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "import gymnasium as gym\n",
     "import numpy as np\n",
