--- a/sim.ipynb
+++ b/sim.ipynb
@@ -451,7 +451,6 @@
     "            #    action = np.append(action, 0)\n",
     "            action += np.random.normal(scale=noise, size=(env_action_dim,))\n",
     "            action = np.clip(action, -1 + EPSILON, 1 - EPSILON)\n",
-    "            print(action)\n",
     "            observation = env.get_observation()\n",
     "            observation[\"image\"] = np.transpose(observation[\"image\"], (2, 0, 1))\n",
     "            next_observation, reward, done, info = env.step(action)\n",
@@ -462,7 +461,7 @@
     "            if info[accept_trajectory_key] and num_steps > 1e3:\n",
     "                num_steps = j\n",
     "\n",
-    "            if info[accept_trajectory_key] and j > 100: #23\n",
+    "            if info[accept_trajectory_key] and j > 23: #100\n",
     "                break\n",
     "            if done or agent_info['done']:\n",
     "                break\n",
@@ -542,15 +541,7 @@
       "Using cuda device\n",
       "Wrapping the env with a `Monitor` wrapper\n",
       "Wrapping the env in a DummyVecEnv.\n",
-      "Wrapping the env in a VecTransposeImage.\n",
-      "[ 0.42624415  0.47050899 -0.01184557 -0.12851524  0.13555935  0.10927322\n",
-      "  0.12461869 -0.0937953 ]\n",
-      "[ 0.38577072  0.13593774  0.14980163 -0.07367031  0.08267029  0.06261667\n",
-      " -0.12688885  0.02494586]\n",
-      "[ 0.16502696 -0.0276669  -0.06932278  0.16880536  0.14608101  0.14006882\n",
-      " -0.11148152 -0.20670084]\n",
-      "[ 0.26997955  0.27019976 -0.16576117 -0.01100102  0.15397642  0.08299792\n",
-      "  0.01185393  0.02689231]\n"
+      "Wrapping the env in a VecTransposeImage.\n"
      ]
     },
     {
@@ -567,55 +558,6 @@
       "  logger.warn(f\"{pre} is not within the observation space.\")\n",
       "/home/enhupgu/miniconda3/envs/roboverse/lib/python3.8/site-packages/gym/utils/passive_env_checker.py:141: UserWarning: \u001b[33mWARN: The obs returned by the `step()` method was expecting numpy array dtype to be float32, actual type: int64\u001b[0m\n",
       "  logger.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 0.22587015  0.11025379 -0.9         0.00334751  0.05414408  0.01167646\n",
-      " -0.11753497 -0.14739314]\n",
-      "[ 0.09575044 -0.07148943 -0.80152402  0.12366121  0.12104772  0.04814204\n",
-      "  0.17137188  0.08938289]\n",
-      "[ 0.00797094 -0.24691573 -0.54933489 -0.04424137  0.01265021 -0.03372591\n",
-      " -0.02635053 -0.07910537]\n",
-      "[-0.01330789 -0.0753675  -0.15349014 -0.07510346 -0.05857858 -0.07864084\n",
-      "  0.07771435 -0.03472936]\n",
-      "[-0.12904509 -0.09176933 -0.28734374 -0.08983833  0.07231472  0.10191997\n",
-      " -0.10954969 -0.08778814]\n",
-      "[ 0.03430324 -0.25947405 -0.28128801  0.05155901 -0.16987855 -0.00650373\n",
-      "  0.18103518  0.19241604]\n",
-      "[ 0.01621199 -0.04449149 -0.20569168 -0.00246811  0.08500001  0.02075203\n",
-      " -0.78245557  0.08544245]\n",
-      "[-0.59641663 -0.75427756  0.9         0.01460244 -0.01441087  0.00315574\n",
-      "  0.12510405 -0.05520579]\n",
-      "[-0.29885761 -0.58736888  0.9         0.03353809 -0.03975335  0.03405577\n",
-      "  0.02570355  0.03222018]\n",
-      "[-0.9         0.16778637  0.45306167  0.07953548  0.33225696  0.14453839\n",
-      " -0.02633411 -0.11901101]\n",
-      "[-0.66077224  0.28290998  0.18371389 -0.13529526  0.02375672 -0.08851049\n",
-      "  0.11130652 -0.02994409]\n",
-      "[-0.53066457  0.04508951  0.26913277 -0.0636233   0.12176032  0.07509597\n",
-      "  0.08920937 -0.12732657]\n",
-      "[-0.36778067 -0.0028652   0.08068111 -0.04019029  0.04849225  0.00205615\n",
-      "  0.04294583  0.02615891]\n",
-      "[-0.32772601  0.06778104  0.08781748  0.10826617 -0.08501823 -0.03572895\n",
-      " -0.0186225   0.0284878 ]\n",
-      "[-0.27007638 -0.05556466  0.2515155   0.04350588  0.00510052  0.09454136\n",
-      " -0.08018846 -0.09763974]\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'PickPlace' object has no attribute 'placed'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 40\u001b[0m\n\u001b[1;32m     38\u001b[0m COLLECT\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m     39\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m COLLECT:\n\u001b[0;32m---> 40\u001b[0m     \u001b[43mcollect_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43menv\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mpickplace\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mplace_success_target\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m100\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m100\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m#30\u001b[39;00m\n\u001b[1;32m     41\u001b[0m     model\u001b[38;5;241m.\u001b[39msave_replay_buffer(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdata/tqc_expert_pick_place\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     42\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "Cell \u001b[0;32mIn[1], line 46\u001b[0m, in \u001b[0;36mcollect_data\u001b[0;34m(env, model, policy, target, num_trajectories, num_timesteps)\u001b[0m\n\u001b[1;32m     44\u001b[0m time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;241m0.1\u001b[39m)\n\u001b[1;32m     45\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(num_timesteps):\n\u001b[0;32m---> 46\u001b[0m     action, agent_info \u001b[38;5;241m=\u001b[39m \u001b[43mpolicy\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_action\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     48\u001b[0m     \u001b[38;5;66;03m# In case we need to pad actions by 1 for easier realNVP modelling \u001b[39;00m\n\u001b[1;32m     49\u001b[0m     env_action_dim \u001b[38;5;241m=\u001b[39m env\u001b[38;5;241m.\u001b[39maction_space\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m]\n",
-      "File \u001b[0;32m~/roboverse/roboverse/policies/pick_place.py:72\u001b[0m, in \u001b[0;36mPickPlace.get_action\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     70\u001b[0m     action_angles \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m0.\u001b[39m, \u001b[38;5;241m0.\u001b[39m, \u001b[38;5;241m0.\u001b[39m]\n\u001b[1;32m     71\u001b[0m     action_gripper \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m0.\u001b[39m]\n\u001b[0;32m---> 72\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mplaced\u001b[49m:\n\u001b[1;32m     73\u001b[0m     \u001b[38;5;66;03m# already moved above the container; drop object\u001b[39;00m\n\u001b[1;32m     74\u001b[0m     action_xyz \u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m0.\u001b[39m, \u001b[38;5;241m0.\u001b[39m, \u001b[38;5;241m0.\u001b[39m)\n\u001b[1;32m     75\u001b[0m     action_angles \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m0.\u001b[39m, \u001b[38;5;241m0.\u001b[39m, \u001b[38;5;241m0.\u001b[39m]\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'PickPlace' object has no attribute 'placed'"
      ]
     }
    ],
@@ -634,7 +576,7 @@
     "from stable_baselines3.common.callbacks import EvalCallback, CheckpointCallback\n",
     "\n",
     "\n",
-    "env = roboverse.make(\"Widow250MultiObjectPutInBowlRandomBowlPositionTrain-v1\",\n",
+    "env = roboverse.make(\"Widow250PickPlaceMultiObject-v0\",\n",
     "                         gui=True,\n",
     "                         observation_mode=\"pixels\",\n",
     "                         transpose_image=False)\n",
@@ -659,7 +601,7 @@
     "\n",
     "COLLECT=True\n",
     "if COLLECT:\n",
-    "    collect_data(env, model, \"pickplace\", \"place_success_target\", 100, 100) #30\n",
+    "    collect_data(env, model, \"pickplace\", \"place_success_target\", 100, 30) #100\n",
     "    model.save_replay_buffer(f\"data/tqc_expert_pick_place\")\n",
     "else:\n",
     "    print(\"load_replay_buffer\")\n",
